@@ -1,3 +1,7 @@
+2008-05-16  Lorenzo Natale <nat@liralab.it>
+	* src/libYARP_dev/src/RemoteControlBoard.cpp: added timestamps to 
+	stete:o port
+
 2008-05-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/harness/PortTest.cpp: add regression test
